# spotlight_filter

./: .env.example  .gitignore  PUBLISHING.md  README.md  pyproject.toml  required_api_client_scopes.txt  requirements.txt
.github/workflows/: pypi-publish.yml  release.yml
src/: spotlight_filter.py
src/cs_cve_tool/: cli.py  client.py
