[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotlight-filter"
version = "0.1.0"
description = "CrowdStrike Spotlight vulnerability investigation CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "crowdstrike-falconpy>=1.4.6",
  "python-dotenv>=1.0.1",
]

[project.scripts]
spotlight_filter = "cs_cve_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["spotlight_filter"]

[tool.setuptools.packages.find]
where = ["src"]
